@@ -35,16 +35,23 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseBodyEmitter;
+import org.springframework.web.servlet.mvc.method.annotation.SseEmitter;
 
 import java.util.LinkedHashMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
+import java.time.Duration;
 import java.util.concurrent.Flow;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 
 /**
@@ -69,13 +76,12 @@ public class A2AController {
 
     private final RestHandler restHandler;
     private final RequestHandler requestHandler;
-    private final String pathPrefix;
+    private final AtomicInteger activeStreams = new AtomicInteger();
+    private final Object streamCompletionMonitor = new Object();
 
-    public A2AController(
-            RestHandler restHandler, RequestHandler requestHandler, A2AProperties properties) {
+    public A2AController(RestHandler restHandler, RequestHandler requestHandler) {
         this.restHandler = restHandler;
         this.requestHandler = requestHandler;
-        this.pathPrefix = properties.getPathPrefix();
     }
 
     @PostMapping("${a2at.server.path-prefix}/message:send")
@@ -94,14 +100,13 @@ public class A2AController {
     @PostMapping(
             value = "${a2at.server.path-prefix}/message:stream",
             produces = MediaType.TEXT_EVENT_STREAM_VALUE)
-    public ResponseBodyEmitter streamMessage(HttpServletRequest req, @RequestBody String body) {
-        ResponseBodyEmitter emitter = new ResponseBodyEmitter(0L);
+    public SseEmitter streamMessage(HttpServletRequest req, @RequestBody String body) {
+        SseEmitter emitter = track(new SseEmitter(0L));
         try {
             SendMessageRequest.Builder builder = SendMessageRequest.newBuilder();
             JsonFormat.parser().merge(body, builder);
             MessageSendParams params = ProtoUtils.FromProto.messageSendParams(builder.build());
 
-            requestHandler.validateRequestedTask(params.message().taskId());
             var ctx = buildContext(req);
             Flow.Publisher<StreamingEventKind> publisher =
                     requestHandler.onMessageSendStream(params, ctx);
@@ -121,16 +126,14 @@ public class A2AController {
                         public void onNext(StreamingEventKind item) {
                             try {
                                 StreamResponse sr = ProtoUtils.ToProto.streamResponse(item);
-                                    String compact =
-                                            JsonFormat.printer()
-                                                    .omittingInsignificantWhitespace()
-                                                    .print(sr);
-                                String sse =
-                                        String.format(Locale.ROOT, "id:%d%n", seq.incrementAndGet())
-                                                + "data:"
-                                                + compact
-                                                + "\n\n";
-                                emitter.send(sse);
+                                String compact =
+                                        JsonFormat.printer()
+                                                .omittingInsignificantWhitespace()
+                                                .print(sr);
+                                emitter.send(
+                                        SseEmitter.event()
+                                                .id(Long.toString(seq.incrementAndGet()))
+                                                .data(compact, MediaType.APPLICATION_JSON));
                             } catch (Exception e) {
                                 log.error("[SSE] Write failed: {}", e.getMessage());
                                 sub.cancel();
@@ -158,15 +161,171 @@ public class A2AController {
         return emitter;
     }
 
+    @GetMapping("${a2at.server.path-prefix}/tasks/{id}")
+    public ResponseEntity<String> getTask(
+            HttpServletRequest req,
+            @PathVariable("id") String taskId) {
+        var ctx = buildContext(req);
+        var resp = restHandler.getTask(ctx, "", taskId, null);
+        return ResponseEntity.status(resp.getStatusCode())
+                .contentType(
+                        MediaType.parseMediaType(
+                                resp.getContentType() != null
+                                        ? resp.getContentType()
+                                        : MediaType.APPLICATION_JSON_VALUE))
+                .body(resp.getBody());
+    }
+
+    @PostMapping("${a2at.server.path-prefix}/tasks/{id}:cancel")
+    public ResponseEntity<String> cancelTask(
+            HttpServletRequest req,
+            @PathVariable("id") String taskId,
+            @RequestBody(required = false) String body) {
+        var ctx = buildContext(req);
+        var resp = restHandler.cancelTask(ctx, "", body != null ? body : "{}", taskId);
+        return ResponseEntity.status(resp.getStatusCode())
+                .contentType(
+                        MediaType.parseMediaType(
+                                resp.getContentType() != null
+                                        ? resp.getContentType()
+                                        : MediaType.APPLICATION_JSON_VALUE))
+                .body(resp.getBody());
+    }
+
+    @PostMapping(
+            value = "${a2at.server.path-prefix}/tasks/{id}:subscribe",
+            produces = MediaType.TEXT_EVENT_STREAM_VALUE)
+    public SseEmitter subscribeToTask(
+            HttpServletRequest req,
+            @PathVariable("id") String taskId) {
+        SseEmitter emitter = track(new SseEmitter(0L));
+        try {
+            var ctx = buildContext(req);
+            var resp = restHandler.subscribeToTask(ctx, "", taskId);
+            if (resp instanceof RestHandler.HTTPRestStreamingResponse streaming) {
+                final AtomicLong seq = new AtomicLong(0);
+                streaming.getPublisher().subscribe(
+                        new Flow.Subscriber<String>() {
+                            private Flow.Subscription sub;
+                            @Override
+                            public void onSubscribe(Flow.Subscription s) {
+                                sub = s;
+                                s.request(1);
+                            }
+                            @Override
+                            public void onNext(String item) {
+                                try {
+                                    emitter.send(
+                                            SseEmitter.event()
+                                                    .id(Long.toString(seq.incrementAndGet()))
+                                                    .data(item, MediaType.APPLICATION_JSON));
+                                } catch (Exception e) {
+                                    log.error("[SSE] Subscribe write failed: {}", e.getMessage());
+                                    sub.cancel();
+                                    emitter.completeWithError(e);
+                                    return;
+                                }
+                                sub.request(1);
+                            }
+                            @Override
+                            public void onError(Throwable t) {
+                                log.error("[SSE] Subscribe stream error: {}", t.getMessage());
+                                emitter.completeWithError(t);
+                            }
+                            @Override
+                            public void onComplete() {
+                                emitter.complete();
+                            }
+                        });
+            } else {
+                emitter.send(
+                        SseEmitter.event()
+                                .id("1")
+                                .data(resp.getBody(), MediaType.APPLICATION_JSON));
+                emitter.complete();
+            }
+        } catch (Exception e) {
+            log.error("[SSE] Subscribe setup failed: {}", e.getMessage(), e);
+            emitter.completeWithError(e);
+        }
+        return emitter;
+    }
+
+    /**
+     * Waits until every SSE response has left the Servlet asynchronous context. This is mainly
+     * useful for deterministic application shutdown; receiving the terminal A2A event can precede
+     * the container's response-completion callback by a few milliseconds.
+     *
+     * @return {@code true} when all streams drained before the timeout
+     */
+    public boolean awaitStreamsDrained(Duration timeout) {
+        if (timeout == null || timeout.isNegative()) {
+            throw new IllegalArgumentException("timeout must not be null or negative");
+        }
+        long deadline = System.nanoTime() + timeout.toNanos();
+        synchronized (streamCompletionMonitor) {
+            while (activeStreams.get() > 0) {
+                long remaining = deadline - System.nanoTime();
+                if (remaining <= 0) {
+                    return false;
+                }
+                try {
+                    TimeUnit.NANOSECONDS.timedWait(streamCompletionMonitor, remaining);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+
+    public int activeStreamCount() {
+        return activeStreams.get();
+    }
+
+    private <T extends ResponseBodyEmitter> T track(T emitter) {
+        activeStreams.incrementAndGet();
+        AtomicBoolean completed = new AtomicBoolean();
+        Runnable finish =
+                () -> {
+                    if (completed.compareAndSet(false, true)) {
+                        activeStreams.decrementAndGet();
+                        synchronized (streamCompletionMonitor) {
+                            streamCompletionMonitor.notifyAll();
+                        }
+                    }
+                };
+        emitter.onCompletion(finish);
+        emitter.onTimeout(finish);
+        emitter.onError(ignored -> finish.run());
+        return emitter;
+    }
+
     private ServerCallContext buildContext(HttpServletRequest req) {
         Map<String, Object> state = new LinkedHashMap<>();
         Map<String, String> headers = new LinkedHashMap<>();
-        java.util.Collections.list(req.getHeaderNames())
-                .forEach(h -> headers.put(h.toLowerCase(Locale.ROOT), req.getHeader(h)));
+        if (req.getHeaderNames() != null) {
+            java.util.Collections.list(req.getHeaderNames())
+                    .forEach(h -> headers.put(h.toLowerCase(Locale.ROOT), req.getHeader(h)));
+        }
         state.put("headers", headers);
         String ext = req.getHeader("A2A-Extensions");
-        Set<String> exts = (ext == null || ext.isBlank()) ? Set.of() : Set.of(ext.split(","));
-        String ver = req.getHeader("A2A-Protocol-Version");
+        Set<String> exts;
+        if (ext == null || ext.isBlank()) {
+            exts = Set.of();
+        } else {
+            java.util.LinkedHashSet<String> parsed = new java.util.LinkedHashSet<>();
+            for (String value : ext.split(",")) {
+                if (!value.isBlank()) parsed.add(value.strip());
+            }
+            exts = java.util.Collections.unmodifiableSet(parsed);
+        }
+        // OMC spec uses A2A-Version; SDK also supports A2A-Protocol-Version alias
+        String ver = req.getHeader("A2A-Version");
+        if (ver == null || ver.isBlank()) {
+            ver = req.getHeader("A2A-Protocol-Version");
+        }
         return new ServerCallContext(null, state, exts, ver);
     }
 }
